uploading changes: main change is in index page where the form is redirecting. Also empty models and repositories have been deleted.

--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -70,6 +70,10 @@
         width: 50px;
         margin-left: 23px
     }
+    .logo{
+        width: 163px;
+        height: 60px;
+    }
 </style>
 
 
@@ -77,7 +81,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top only-logo">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="https://bid.cars/img/logo.svg" class="logo run-svg"
+        <a class="navbar-brand" href="/"><img src="/static/img/HomeLogo.png" th:src="@{/img/HomeLogo.png}" class="logo run-svg"
                                               alt="logo.svn"></a>
     </div>
 </nav>
