--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,6 @@
 <body>
 
 
-
 <!-- Here is created the first section -->
 
 <section class="bg-dark text-light p-5 text-center">
@@ -19,40 +18,48 @@
                 <h2>Support Bulgarian Manufacturing</h2>
                 <p class="lead my-2">We are the only bulgarian manufacturer for towbars. Support the local business.</p>
                 <a class="btn btn-info btn-lg my-2" href="/quick-order" role="button">Quick Order</a>
-<!--                <button type="button" class="btn ">Quick Order</button>-->
+                <!--                <button type="button" class="btn ">Quick Order</button>-->
             </div>
 
             <div class="col-7 mx-5" sec:authorize="isAuthenticated()">
-                <form class="row g-2">
+                <form   th:method="post"
+                        th:action="@{/find-order}"
+                        th:object="${car}"
+                        class="row g-2">
                     <div class="col-md-5">
                         <label for="makeDropdown" class="form-label">Make</label>
-                        <select class="form-select" id="makeDropdown" name="user">
-                            <option value="">--Select User--</option>
+                        <select th:field="*{make}"
+                                class="form-select" id="makeDropdown" name="user">
+                            <option value="">--Select--</option>
                         </select>
                     </div>
                     <div class="col-md-5">
                         <label for="modelDropdown" class="form-label">Model</label>
-                        <select class="form-select" id="modelDropdown" name="user">
-                            <option value="">--Select User--</option>
+                        <select th:field="*{model}"
+                                class="form-select" id="modelDropdown" name="user">
+                            <option value="">--Select--</option>
                         </select>
                     </div>
 
                     <div class="col-md-4">
                         <label for="generationDropdown" class="form-label">Generation</label>
-                        <select class="form-select" id="generationDropdown" name="user">
-                            <option value="">--Select User--</option>
+                        <select th:field="*{generation}"
+                                class="form-select" id="generationDropdown" name="user">
+                            <option value="">--Select--</option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <label for="seriesDropdown" class="form-label">Series</label>
-                        <select class="form-select" id="seriesDropdown" name="user">
-                            <option value="">--Select User--</option>
+                        <select th:field="*{serie}"
+                                class="form-select" id="seriesDropdown" name="user">
+                            <option value="">--Select--</option>
                         </select>
                     </div>
                     <div class="col-md-3">
                         <label for="trimDropdown" class="form-label">Trim</label>
-                        <select class="form-select" id="trimDropdown" name="user">
-                            <option value="">--Select User--</option>
+                        <select th:field="*{trim}"
+                                class="form-select" id="trimDropdown" name="user">
+                            <option value="">--Select--</option>
                         </select>
                     </div>
 
@@ -64,7 +71,8 @@
             </div>
             <div class="col-9" sec:authorize="!isAuthenticated()">
                 <th:block sec:authorize="!isAuthenticated()">
-                    <img class="img-fluid w-50"  src="/static/img/car-with-spare-wheel-svgrepo-com.svg" th:src="@{/img/car-with-spare-wheel-svgrepo-com.svg}" alt="Home page photo">
+                    <img class="img-fluid w-50" src="/static/img/car-with-spare-wheel-svgrepo-com.svg"
+                         th:src="@{/img/car-with-spare-wheel-svgrepo-com.svg}" alt="Home page photo">
                 </th:block>
             </div>
 
@@ -92,7 +100,8 @@
         <div class="row text-center g-4">
             <div class="col-md">
                 <div class="card bg-warning" style="width: 18rem;">
-                    <img src="../static/img/fixed.jpg" style="width: 18rem; height: 11rem;" th:src="@{img/fixed.jpg}" class="card-img-top" alt="...">
+                    <img src="../static/img/fixed.jpg" style="width: 18rem; height: 11rem;" th:src="@{img/fixed.jpg}"
+                         class="card-img-top" alt="...">
                     <div class="card-body text-bg-secondary p-3">
                         <p class="card-text">Fixed tow bars. Prose and cons. Everything you need to know!</p>
                         <a href="/info/fixed" class="btn btn-primary">Read more</a>
@@ -102,7 +111,8 @@
 
             <div class="col-md">
                 <div class="card" style="width: 18rem;">
-                    <img src="../static/img/detachable.png" style="width: 18rem; height: 11rem;" th:src="@{img/detachable.png}" class="card-img-top" alt="...">
+                    <img src="../static/img/detachable.png" style="width: 18rem; height: 11rem;"
+                         th:src="@{img/detachable.png}" class="card-img-top" alt="...">
                     <div class="card-body text-bg-secondary p-3">
                         <p class="card-text">Detachable tow bars. Prose and cons. Everything you need to know!</p>
                         <a href="/info/detachable" class="btn btn-primary">Read more</a>
@@ -112,7 +122,8 @@
 
             <div class="col-md">
                 <div class="card bg-info" style="width: 18rem;">
-                    <img src="../static/img/retractable.jpg" style="width: 18rem; height: 11rem;" th:src="@{img/retractable.jpg}" class="card-img-top" alt="...">
+                    <img src="../static/img/retractable.jpg" style="width: 18rem; height: 11rem;"
+                         th:src="@{img/retractable.jpg}" class="card-img-top" alt="...">
                     <div class="card-body text-bg-secondary p-3">
                         <p class="card-text">Retractable tow bars. Prose and cons. Everything you need to know!</p>
                         <a href="/info/retractable" class="btn btn-primary">Read more</a>
@@ -129,74 +140,7 @@
 <footer th:replace="fragments/footer">
 </footer>
 
-<script>
-    const makeDropdown = document.getElementById("makeDropdown");
-
-    fetch("/api/users")
-        .then(response => response.json())
-        .then(users => {
-            users.forEach(user => {
-                const option = document.createElement("option");
-                option.value = user.id;
-                option.text = user.username;
-                makeDropdown.add(option);
-            });
-        });
-    const modelDropdown = document.getElementById("modelDropdown");
-
-    fetch("/api/users")
-        .then(response => response.json())
-        .then(users => {
-            users.forEach(user => {
-                const option = document.createElement("option");
-                option.value = user.id;
-                option.text = user.username;
-                modelDropdown.add(option);
-            });
-        });
-    const generationDropdown = document.getElementById("generationDropdown");
-
-    fetch("/api/users")
-        .then(response => response.json())
-        .then(users => {
-            users.forEach(user => {
-                const option = document.createElement("option");
-                option.value = user.id;
-                option.text = user.username;
-                generationDropdown.add(option);
-            });
-        });
-    const seriesDropdown = document.getElementById("seriesDropdown");
-
-    fetch("/api/users")
-        .then(response => response.json())
-        .then(users => {
-            users.forEach(user => {
-                const option = document.createElement("option");
-                option.value = user.id;
-                option.text = user.username;
-                seriesDropdown.add(option);
-            });
-        });
-    const trimDropdown = document.getElementById("trimDropdown");
-
-    fetch("/api/users")
-        .then(response => response.json())
-        .then(users => {
-            users.forEach(user => {
-                const option = document.createElement("option");
-                option.value = user.id;
-                option.text = user.username;
-                trimDropdown.add(option);
-            });
-        });
-
-</script>
-
-
-
-
-
+<script type="text/javascript" src="/js/form_insert_car.js"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
