--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" type="text/css" href="https://bid.cars/css/style.css">
 </head>
 
+<style>
+    .logo {
+        width: 163px;
+        height: 60px;
+    }
+</style>
+
 <body data-new-gr-c-s-check-loaded="14.1100.0" data-gr-ext-installed="">
 
 <section class="fullpage-section signup-page">
@@ -18,8 +25,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top only-logo">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="https://bid.cars/img/logo.svg"
-                                                  class="logo run-svg"></a>
+            <a class="navbar-brand" href="/"><img src="/static/img/HomeLogo.png" th:src="@{/img/HomeLogo.png}"
+                                                  class="logo run-svg"
+                                                  alt="logo.svn"></a>
         </div>
     </nav>
 
@@ -71,14 +79,16 @@
                     <input th:field="*{firstName}"
                            type="text" class="form-control" id="firstname" name="first_name"
                            aria-describedby="FirstName" value="" placeholder="Enter your First Name">
-                    <p class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errorclass="error" th:errors="*{firstName}"></p>
+                    <p class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errorclass="error"
+                       th:errors="*{firstName}"></p>
                 </div>
                 <div class="form-group">
                     <label for="lastname">Last Last*</label>
                     <input th:field="*{lastName}"
                            type="text" class="form-control" id="lastname" name="last_name"
                            aria-describedby="LastName" value="" placeholder="Enter your Last Name">
-                    <p class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errorclass="error" th:errors="*{lastName}"></p>
+                    <p class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errorclass="error"
+                       th:errors="*{lastName}"></p>
                 </div>
                 <div class="form-group">
                     <label for="username">Username*</label>
@@ -86,7 +96,8 @@
                            type="text" class="form-control" id="username" name="username"
                            aria-describedby="usernameHelp"
                            value="" placeholder="Enter your Username">
-                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errorclass="error" th:errors="*{username}"></p>
+                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errorclass="error"
+                       th:errors="*{username}"></p>
                     <p class="text-danger" th:unless="${isValid == true}">Username is already used</p>
                 </div>
 
@@ -95,7 +106,8 @@
                            for="password">Password*</label>
                     <input type="password" class="form-control" id="password" name="password" value=""
                            placeholder="Enter your Password">
-                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errorclass="error" th:errors="*{password}"></p>
+                    <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errorclass="error"
+                       th:errors="*{password}"></p>
                 </div>
 
                 <div class="form-group">
@@ -103,7 +115,8 @@
                     <input th:field="*{confirmPassword}"
                            type="password" class="form-control" id="confirm_password" name="password_confirmation"
                            value="" placeholder="Confirm your Password">
-                    <p class="text-danger" th:if="${#fields.hasErrors('confirmPassword')}" th:errorclass="error" th:errors="*{confirmPassword}"></p>
+                    <p class="text-danger" th:if="${#fields.hasErrors('confirmPassword')}" th:errorclass="error"
+                       th:errors="*{confirmPassword}"></p>
                     <p class="text-danger" th:unless="${passwordMatch == true}">Confirm password does not match</p>
                 </div>
 
