--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,6 +1,14 @@
+<style>
+    .logo{
+        width: 163px;
+        height: 50px;
+    }
+</style>
+
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div class="container">
-        <a href="/" class="navbar-brand">Home page</a>
+        <a href="/" class="navbar-brand"><img src="/static/img/HomeLogo.png" th:src="@{/img/HomeLogo.png}" class="logo run-svg"
+                                              alt="logo.svn"></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
             <span class="navbar-toggler-icon"></span>
@@ -28,6 +36,9 @@
                         <li><a class="dropdown-item" href="/all-orders/fromPhone">Priority Orders From Phone</a></li>
                         <li><a class="dropdown-item" href="/all-orders/fromWeb">Orders From Website</a></li>
                     </ul>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a href="/add-product" class="nav-link">Add Product</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a href="/my-profile" class="nav-link">My profile</a>
