--- a/src/main/resources/templates/shop-page.html
+++ b/src/main/resources/templates/shop-page.html
@@ -104,35 +104,43 @@
     <div class="row d-flex justify-content-center">
         <div class="container">
             <div class="profile-card p-3 py-4 mb-3">
-                <form class="row g-5 mb-5">
+                <form th:method="post"
+                      th:action="@{/find-order}"
+                      th:object="${car}"
+                        class="row g-5 mb-5">
                     <div class="col-md-2">
                         <label for="makeDropdown" class="form-label">Make</label>
-                        <select class="form-select" id="makeDropdown" name="user">
+                        <select th:field="*{make}"
+                                class="form-select" id="makeDropdown" name="user">
                             <option value="">--Select User--</option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label for="modelDropdown" class="form-label">Model</label>
-                        <select class="form-select" id="modelDropdown" name="user">
+                        <select th:field="*{model}"
+                                class="form-select" id="modelDropdown" name="user">
                             <option value="">--Select User--</option>
                         </select>
                     </div>
 
                     <div class="col-md-2">
                         <label for="generationDropdown" class="form-label">Generation</label>
-                        <select class="form-select" id="generationDropdown" name="user">
+                        <select th:field="*{generation}"
+                                class="form-select" id="generationDropdown" name="user">
                             <option value="">--Select User--</option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label for="seriesDropdown" class="form-label">Series</label>
-                        <select class="form-select" id="seriesDropdown" name="user">
+                        <select th:field="*{serie}"
+                                class="form-select" id="seriesDropdown" name="user">
                             <option value="">--Select User--</option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label for="trimDropdown" class="form-label">Trim</label>
-                        <select class="form-select" id="trimDropdown" name="user">
+                        <select th:field="*{trim}"
+                                class="form-select" id="trimDropdown" name="user">
                             <option value="">--Select User--</option>
                         </select>
                     </div>
@@ -140,6 +148,7 @@
                     <div class="col-10 mt-3">
                         <button type="submit" class="btn btn-primary">Find car</button>
                     </div>
+
                 </form>
 
                 <div class="card mb-3">
@@ -324,6 +333,15 @@
         </div>
     </div>
 </div>
+
+
+<script type="text/javascript" src="/js/form_insert_car.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
