--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -25,8 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top only-logo">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="/static/img/HomeLogo.png" th:src="@{/img/HomeLogo.png}"
-                                                  class="logo run-svg"
+            <a href="/" class="navbar-brand"><img src="/static/img/logo4.png" th:src="@{/img/logo4.png}" class="logo run-svg"
                                                   alt="logo.svn"></a>
         </div>
     </nav>
