--- a/src/main/resources/templates/complete-order.html
+++ b/src/main/resources/templates/complete-order.html
@@ -26,6 +26,7 @@
                     <a class="btn btn-outline-success" href="/" role="button">Go back</a>
                 </div>
             </div>
+        </div>
     </body>
 
 </html> 
