--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -7,7 +7,7 @@
 
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div class="container">
-        <a href="/" class="navbar-brand"><img src="/static/img/HomeLogo.png" th:src="@{/img/HomeLogo.png}" class="logo run-svg"
+        <a href="/" class="navbar-brand"><img src="/static/img/logo4.png" th:src="@{/img/logo4.png}" class="logo run-svg"
                                               alt="logo.svn"></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -37,7 +37,7 @@
                         <li><a class="dropdown-item" href="/all-orders/fromWeb">Orders From Website</a></li>
                     </ul>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
                     <a href="/add-product" class="nav-link">Add Product</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
