--- a/src/main/resources/templates/ErrorPages/404.html
+++ b/src/main/resources/templates/ErrorPages/404.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap 5 404 page with image</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
 <body>
-<h1>Something went wrong! </h1>
-<h2>Our Engineers are on it</h2>
-<a href="/">Go Home</a>
+<div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="text-center row">
+        <div class=" col-md-6">
+            <img src="/static/img/error404.png" th:src="@{img/error404.png}" style="width: 350px; height: 350px;" alt=""
+                 class="img-fluid">
+        </div>
+        <div class=" col-md-6 mt-5">
+            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+            <p class="lead">
+                The page you’re looking for doesn’t exist.
+            </p>
+            <a href="/" class="btn btn-primary">Go Home</a>
+        </div>
+
+    </div>
+</div>
 </body>
+
 </html>
