--- a/src/main/resources/templates/add-products.html
+++ b/src/main/resources/templates/add-products.html
@@ -126,7 +126,7 @@
                                         </td>
                                         <td><input th:field="*{quantity}" type="text" id="quantityDetachable" class="form-control input-custom" th:placeholder="*{quantity}"></td>
                                         <td><input th:field="*{price}" type="text" id="priceDetachable" class="form-control input-custom" th:placeholder="*{price}"></td>
-                                        <td><button type="submit" class="btn btn-outline-secondary me-2">View Order</button></td>
+                                        <td><button type="submit" class="btn btn-outline-secondary me-2">Update</button></td>
                                     </tr>
                                 </form>
 
