--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -22,8 +22,6 @@
 </head>
 
 <style>
-
-
     .password-toggle-icon {
         position: absolute;
         right: 10px;
@@ -92,29 +90,6 @@
          style="background-image: url('/img/953728c59e28e7e13550344d08f1b52a.jpg')">
 
 
-        <!-- Here is created the left side -->
-        <div id="carousel-text" class="carousel slide carousel-texter" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-text" data-slide-to="0" class=""></li>
-                <li data-target="#carousel-text" data-slide-to="1" class="active"></li>
-                <li data-target="#carousel-text" data-slide-to="2" class=""></li>
-            </ol>
-
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item">
-                    <h5>Buying American cars now easier than ever</h5>
-                    <p>BidCars care about every step by step process. Fast, without unnecessary paperwork and additional charges. The simplest way to import your first American's car.</p>
-                </div>
-                <div class="carousel-item active">
-                    <h5>Just Bid &amp; Win with one click</h5>
-                    <p>BidCars deliver vehicle to your place of resident. Follow your vehicle location including shipping tracking. No additional charges for photos inspection at our werehouse.</p>
-                </div>
-                <div class="carousel-item">
-                    <h5>Sign Up &amp; Set up your bidding power</h5>
-                    <p>BidCars help you search through over 50 000 vehicles available to bid every month. 5 werehouses localized in Newark, Savannah, Indianapolis, Houston and Los Angeles let you ship your cargo without unnecessary additionall trucking cost.</p>
-                </div>
-            </div>
-        </div>
 
 
     </div>
@@ -123,7 +98,7 @@
 
     <div class="half-part right-side-part">
         <div class="middle-part">
-            <h5>Login in my Fucking Site</h5>
+            <h5>Login in my  <span>WebSite</span></h5>
             <h6>Enter your details below</h6>
 
             <p th:if="${bad_credentials == true}"
