--- a/src/main/resources/templates/find-all-active.html
+++ b/src/main/resources/templates/find-all-active.html
@@ -39,7 +39,7 @@
 <body>
 
 
-<main class="p-5 align-content-center">
+<main class="p-5 align-content-center" style="min-height: 87.3vh;">
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="container col-md-7">
