--- a/src/main/resources/templates/shop-page.html
+++ b/src/main/resources/templates/shop-page.html
@@ -25,65 +25,7 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark" xmlns:sec="http://www.w3.org/1999/xhtml">
-    <div class="container">
-        <a href="/" class="navbar-brand"><img src="/static/img/logo4.png" th:src="@{/img/logo4.png}" class="logo run-svg"
-                                              alt="logo.svn"></a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Collapse menu is created here -->
-
-        <div class="collapse navbar-collapse" id="navmenu" >
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Admin
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item" href="/admin/change-role">Change Role</a></li>
-                        <li><a class="dropdown-item" href="/admin/find-active">Find all active accounts</a></li>
-                        <li><a class="dropdown-item" href="/admin/find-nonActive">Find all non-active accounts</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
-                    <a class="nav-link dropdown-toggle" href="#" id="ordersDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Orders
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item" href="/all-orders/fromPhone">Priority Orders From Phone</a></li>
-                        <li><a class="dropdown-item" href="/all-orders/fromWeb">Orders From Website</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a href="/add-product" class="nav-link">Add Product</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a href="/my-profile" class="nav-link">My profile</a>
-                </li>
-                <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a href="/users/login" class="nav-link">Login</a>
-                </li>
-                <li class="nav-item" sec:authorize="!isAuthenticated()">
-                    <a href="/users/register" class="nav-link">Register</a>
-                </li>
-
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a href="/cart" class="nav-link">Cart</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <form
-                            th:method="post"
-                            th:action="@{/users/logout}">
-                        <input class="btn btn-link nav-link" type="submit" value="Logout">
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<header th:replace="fragments/nav"></header>
 
 <style>
     body {
@@ -110,7 +52,7 @@
 
 <body>
 <div class="container mt-5">
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center" style="margin-top: 3em">
         <div class="container">
             <div class="profile-card p-3 py-4 mb-3">
                 <form th:method="post"
